--- a/private/.htaccess
+++ b/private/.htaccess
@@ -2120,6 +2120,7 @@ Deny from 104.131.169.32
 Deny from 104.131.173.99
 Deny from 104.131.18.212
 Deny from 104.131.188.133
+Deny from 104.131.20.33
 Deny from 104.131.23.217
 Deny from 104.131.2.76
 Deny from 104.131.40.203
@@ -6405,6 +6406,7 @@ Deny from 13.38.120.109
 Deny from 13.38.244.75
 Deny from 13.38.60.183
 Deny from 13.38.62.65
+Deny from 13.38.78.61
 Deny from 13.39.110.74
 Deny from 13.39.148.138
 Deny from 13.39.148.5
@@ -6939,6 +6941,7 @@ Deny from 138.121.181.234
 Deny from 138.121.181.241
 Deny from 138.122.193.211
 Deny from 138.124.183.158
+Deny from 138.124.59.248
 Deny from 138.124.90.50
 Deny from 138.128.153.231
 Deny from 138.128.173.10
@@ -8518,6 +8521,7 @@ Deny from 149.202.80.155
 Deny from 149.202.8.124
 Deny from 149.202.82.11
 Deny from 149.202.86.56
+Deny from 149.202.86.86
 Deny from 149.202.87.37
 Deny from 149.202.87.41
 Deny from 149.202.93.136
@@ -8838,7 +8842,9 @@ Deny from 151.80.89.231
 Deny from 15.181.145.96
 Deny from 151.84.195.60
 Deny from 15.188.143.76
+Deny from 15.188.23.197
 Deny from 15.188.47.88
+Deny from 15.188.80.172
 Deny from 15.188.83.167
 Deny from 15.188.8.4
 Deny from 15.188.90.228
@@ -9447,6 +9453,7 @@ Deny from 155.138.232.196
 Deny from 155.138.247.69
 Deny from 155.138.255.123
 Deny from 155.138.255.55
+Deny from 155.186.185.74
 Deny from 155.190.53.4
 Deny from 155.223.114.253
 Deny from 155.248.193.153
@@ -9936,6 +9943,7 @@ Deny from 158.62.22.209
 Deny from 158.62.23.55
 Deny from 158.62.33.40
 Deny from 158.62.34.172
+Deny from 158.62.34.67
 Deny from 158.62.34.80
 Deny from 158.62.36.223
 Deny from 158.62.37.227
@@ -10258,6 +10266,7 @@ Deny from 160.22.120.133
 Deny from 160.22.121.199
 Deny from 160.226.137.182
 Deny from 160.226.242.185
+Deny from 160.238.0.196
 Deny from 160.238.72.144
 Deny from 160.238.72.25
 Deny from 160.238.73.159
@@ -10998,6 +11007,7 @@ Deny from 167.71.82.127
 Deny from 167.71.94.207
 Deny from 167.71.98.28
 Deny from 167.86.110.100
+Deny from 167.86.113.243
 Deny from 167.86.119.137
 Deny from 167.86.122.200
 Deny from 167.86.146.94
@@ -13259,6 +13269,7 @@ Deny from 180.190.209.120
 Deny from 180.190.211.35
 Deny from 180.190.212.164
 Deny from 180.190.215.28
+Deny from 180.190.216.83
 Deny from 180.190.219.107
 Deny from 180.190.229.51
 Deny from 180.190.230.66
@@ -13401,6 +13412,7 @@ Deny from 180.75.244.168
 Deny from 180.75.250.231
 Deny from 180.75.251.108
 Deny from 180.75.252.68
+Deny from 180.75.255.143
 Deny from 180.75.37.168
 Deny from 180.75.81.191
 Deny from 180.75.92.200
@@ -13612,6 +13624,7 @@ Deny from 181.214.218.81
 Deny from 181.214.218.91
 Deny from 181.214.29.68
 Deny from 181.214.39.88
+Deny from 181.214.58.201
 Deny from 181.214.58.76
 Deny from 181.214.94.209
 Deny from 181.214.94.93
@@ -15603,6 +15616,7 @@ Deny from 188.166.249.33
 Deny from 188.166.250.49
 Deny from 188.166.251.128
 Deny from 188.166.251.162
+Deny from 188.166.253.115
 Deny from 188.166.253.178
 Deny from 188.166.253.214
 Deny from 188.166.253.98
@@ -17804,6 +17818,7 @@ Deny from 196.191.240.91
 Deny from 196.191.241.18
 Deny from 196.191.241.3
 Deny from 196.191.248.150
+Deny from 196.191.249.167
 Deny from 196.191.2.62
 Deny from 196.191.3.211
 Deny from 196.191.32.14
@@ -18109,6 +18124,7 @@ Deny from 197.206.118.223
 Deny from 197.206.132.203
 Deny from 197.206.159.158
 Deny from 197.206.70.205
+Deny from 197.207.165.199
 Deny from 197.207.180.38
 Deny from 197.207.183.16
 Deny from 197.207.188.5
@@ -21276,6 +21292,7 @@ Deny from 217.165.69.230
 Deny from 217.165.69.24
 Deny from 217.165.69.46
 Deny from 217.165.78.172
+Deny from 217.165.98.55
 Deny from 217.16.79.192
 Deny from 217.169.219.117
 Deny from 217.170.205.14
@@ -22034,6 +22051,7 @@ Deny from 24.201.128.89
 Deny from 24.201.13.110
 Deny from 24.201.83.20
 Deny from 24.202.176.25
+Deny from 24.203.85.152
 Deny from 24.206.119.128
 Deny from 24.206.35.218
 Deny from 24.207.128.67
@@ -22209,6 +22227,7 @@ Deny from 27.100.12.199
 Deny from 27.100.12.217
 Deny from 27.100.13.212
 Deny from 27.105.103.112
+Deny from 27.107.47.178
 Deny from 27.110.146.138
 Deny from 27.110.164.162
 Deny from 27.110.165.98
@@ -23142,6 +23161,7 @@ Deny from 35.180.91.135
 Deny from 35.180.98.173
 Deny from 35.181.112.20
 Deny from 35.181.155.226
+Deny from 35.181.169.160
 Deny from 35.181.45.41
 Deny from 35.181.48.37
 Deny from 35.181.48.41
@@ -24229,6 +24249,7 @@ Deny from 39.46.134.198
 Deny from 39.46.140.31
 Deny from 39.46.179.37
 Deny from 39.46.213.206
+Deny from 3.94.64.158
 Deny from 39.47.121.135
 Deny from 39.48.154.143
 Deny from 39.48.178.180
@@ -25328,6 +25349,7 @@ Deny from 43.224.130.159
 Deny from 43.224.182.14
 Deny from 43.225.1.113
 Deny from 43.225.142.236
+Deny from 43.225.189.111
 Deny from 43.225.20.182
 Deny from 43.225.26.18
 Deny from 43.225.8.39
@@ -26371,6 +26393,7 @@ Deny from 46.239.2.69
 Deny from 46.240.68.210
 Deny from 46.241.57.29
 Deny from 46.242.11.35
+Deny from 46.242.233.14
 Deny from 46.242.238.125
 Deny from 46.242.241.15
 Deny from 46.242.248.14
@@ -27036,6 +27059,7 @@ Deny from 49.207.229.214
 Deny from 49.207.229.49
 Deny from 49.207.245.214
 Deny from 49.207.246.201
+Deny from 49.207.3.19
 Deny from 49.207.48.43
 Deny from 49.207.51.191
 Deny from 49.217.115.185
@@ -27433,6 +27457,7 @@ Deny from 50.116.89.2
 Deny from 50.116.94.114
 Deny from 50.116.94.126
 Deny from 50.118.222.111
+Deny from 50.118.223.97
 Deny from 50.172.25.106
 Deny from 50.18.73.145
 Deny from 50.19.224.60
@@ -27776,6 +27801,7 @@ Deny from 51.39.231.6
 Deny from 51.39.9.82
 Deny from 5.14.155.224
 Deny from 51.44.15.101
+Deny from 51.44.162.188
 Deny from 51.44.18.250
 Deny from 51.44.7.130
 Deny from 5.14.52.135
@@ -29621,6 +29647,7 @@ Deny from 64.120.33.236
 Deny from 64.120.33.89
 Deny from 64.121.220.168
 Deny from 64.124.8.1
+Deny from 64.124.8.103
 Deny from 64.124.8.116
 Deny from 64.124.8.138
 Deny from 64.124.8.147
@@ -29628,6 +29655,7 @@ Deny from 64.124.8.17
 Deny from 64.124.8.192
 Deny from 64.124.8.193
 Deny from 64.124.8.194
+Deny from 64.124.8.195
 Deny from 64.124.8.206
 Deny from 64.124.8.213
 Deny from 64.124.8.217
@@ -30255,6 +30283,7 @@ Deny from 69.163.181.230
 Deny from 69.163.193.146
 Deny from 69.163.198.100
 Deny from 69.163.201.96
+Deny from 69.163.208.59
 Deny from 69.163.225.118
 Deny from 69.163.225.126
 Deny from 69.164.199.72
@@ -30479,6 +30508,7 @@ Deny from 72.225.204.229
 Deny from 72.229.0.2
 Deny from 72.229.72.161
 Deny from 72.234.20.219
+Deny from 72.234.242.8
 Deny from 72.238.27.67
 Deny from 72.240.197.130
 Deny from 72.24.143.12
@@ -30659,6 +30689,7 @@ Deny from 74.208.233.11
 Deny from 74.208.252.234
 Deny from 74.208.30.51
 Deny from 74.208.57.18
+Deny from 74.208.58.113
 Deny from 74.208.59.106
 Deny from 74.208.59.140
 Deny from 74.208.59.235
@@ -31229,6 +31260,7 @@ Deny from 79.119.132.171
 Deny from 79.120.76.144
 Deny from 79.121.16.37
 Deny from 79.124.49.174
+Deny from 79.124.49.70
 Deny from 79.124.56.226
 Deny from 79.124.58.162
 Deny from 79.124.74.7
@@ -31637,6 +31669,7 @@ Deny from 82.165.86.148
 Deny from 82.165.87.137
 Deny from 82.165.88.219
 Deny from 82.165.88.85
+Deny from 82.165.97.195
 Deny from 82.166.121.25
 Deny from 82.166.140.117
 Deny from 82.167.166.224
@@ -31959,6 +31992,7 @@ Deny from 84.239.41.145
 Deny from 84.239.41.199
 Deny from 84.239.47.135
 Deny from 84.239.47.141
+Deny from 84.239.5.184
 Deny from 84.241.195.84
 Deny from 84.243.196.168
 Deny from 84.245.120.154
@@ -32804,6 +32838,7 @@ Deny from 89.248.165.204
 Deny from 89.248.169.52
 Deny from 89.248.172.115
 Deny from 89.248.172.174
+Deny from 89.248.172.183
 Deny from 89.248.172.43
 Deny from 89.248.172.92
 Deny from 89.248.174.11
