--- a/wwwroot/.htaccess
+++ b/wwwroot/.htaccess
@@ -1383,6 +1383,7 @@ Deny from 103.192.80.244
 Deny from 103.193.197.37
 Deny from 103.193.91.152
 Deny from 103.194.184.138
+Deny from 103.194.184.194
 Deny from 103.194.184.226
 Deny from 103.194.184.66
 Deny from 103.194.185.114
@@ -1391,6 +1392,7 @@ Deny from 103.194.185.206
 Deny from 103.194.185.26
 Deny from 103.194.185.58
 Deny from 103.194.186.10
+Deny from 103.194.186.74
 Deny from 103.194.187.146
 Deny from 103.194.187.170
 Deny from 103.194.187.186
@@ -1487,6 +1489,7 @@ Deny from 103.212.179.100
 Deny from 103.212.20.91
 Deny from 103.212.214.26
 Deny from 103.212.91.142
+Deny from 103.212.98.106
 Deny from 103.212.98.154
 Deny from 103.212.98.186
 Deny from 103.212.98.210
@@ -2149,6 +2152,7 @@ Deny from 104.160.7.244
 Deny from 104.160.8.53
 Deny from 104.161.80.222
 Deny from 104.164.123.202
+Deny from 104.164.173.247
 Deny from 104.164.183.77
 Deny from 104.165.127.13
 Deny from 104.165.127.156
@@ -2459,6 +2463,7 @@ Deny from 104.244.73.136
 Deny from 104.244.73.193
 Deny from 104.244.73.205
 Deny from 104.244.74.159
+Deny from 104.244.74.248
 Deny from 104.244.75.243
 Deny from 104.244.75.33
 Deny from 104.244.76.13
@@ -2546,6 +2551,8 @@ Deny from 104.43.219.10
 Deny from 104.43.229.234
 Deny from 104.45.220.97
 Deny from 104.45.41.45
+Deny from 104.45.88.237
+Deny from 104.45.88.94
 Deny from 104.9.131.111
 Deny from 104.9.230.231
 Deny from 104.9.240.56
@@ -6381,6 +6388,7 @@ Deny from 13.233.4.122
 Deny from 13.233.73.212
 Deny from 13.234.110.168
 Deny from 13.234.19.35
+Deny from 13.234.202.101
 Deny from 13.235.126.138
 Deny from 13.235.16.100
 Deny from 13.235.165.105
@@ -6407,6 +6415,7 @@ Deny from 13.38.120.109
 Deny from 13.38.244.75
 Deny from 13.38.60.183
 Deny from 13.38.62.65
+Deny from 13.38.78.13
 Deny from 13.38.78.61
 Deny from 13.39.110.74
 Deny from 13.39.148.138
@@ -6837,6 +6846,7 @@ Deny from 13.74.151.36
 Deny from 13.74.152.124
 Deny from 13.74.154.40
 Deny from 13.74.158.85
+Deny from 13.74.172.131
 Deny from 13.74.182.94
 Deny from 13.74.195.106
 Deny from 13.74.220.189
@@ -8629,6 +8639,7 @@ Deny from 149.56.150.242
 Deny from 149.56.150.249
 Deny from 149.56.150.253
 Deny from 149.56.150.3
+Deny from 149.56.150.38
 Deny from 149.56.150.4
 Deny from 149.56.150.40
 Deny from 149.56.150.41
@@ -8637,6 +8648,7 @@ Deny from 149.56.150.43
 Deny from 149.56.150.5
 Deny from 149.56.150.59
 Deny from 149.56.150.61
+Deny from 149.56.150.64
 Deny from 149.56.150.71
 Deny from 149.56.150.75
 Deny from 149.56.150.76
@@ -8791,6 +8803,7 @@ Deny from 150.95.31.43
 Deny from 150.95.83.97
 Deny from 150.95.90.172
 Deny from 151.0.22.41
+Deny from 151.0.23.140
 Deny from 151.106.10.135
 Deny from 151.106.11.180
 Deny from 151.106.11.181
@@ -8948,6 +8961,7 @@ Deny from 15.236.224.248
 Deny from 15.236.42.130
 Deny from 15.237.128.43
 Deny from 15.237.128.65
+Deny from 15.237.182.238
 Deny from 15.237.220.170
 Deny from 15.237.52.210
 Deny from 15.237.61.174
@@ -8959,6 +8973,7 @@ Deny from 152.42.176.219
 Deny from 152.42.179.157
 Deny from 152.42.180.180
 Deny from 152.42.182.191
+Deny from 152.42.183.235
 Deny from 152.42.189.177
 Deny from 152.42.189.37
 Deny from 152.42.190.115
@@ -9424,6 +9439,7 @@ Deny from 154.8.158.194
 Deny from 154.83.43.12
 Deny from 154.85.125.185
 Deny from 154.85.188.14
+Deny from 154.85.62.189
 Deny from 154.90.48.116
 Deny from 154.90.48.145
 Deny from 154.91.138.16
@@ -9883,6 +9899,7 @@ Deny from 157.66.48.184
 Deny from 157.66.48.185
 Deny from 157.66.48.186
 Deny from 157.66.54.194
+Deny from 157.66.54.6
 Deny from 157.66.55.198
 Deny from 157.66.56.112
 Deny from 157.7.104.94
@@ -10067,6 +10084,7 @@ Deny from 159.223.40.95
 Deny from 159.223.41.208
 Deny from 159.223.41.244
 Deny from 159.223.42.39
+Deny from 159.223.44.124
 Deny from 159.223.44.48
 Deny from 159.223.44.75
 Deny from 159.223.45.217
@@ -10187,6 +10205,7 @@ Deny from 159.89.166.137
 Deny from 159.89.166.210
 Deny from 159.89.168.53
 Deny from 159.89.169.13
+Deny from 159.89.171.230
 Deny from 159.89.171.3
 Deny from 159.89.172.158
 Deny from 159.89.17.243
@@ -10361,6 +10380,7 @@ Deny from 161.97.111.173
 Deny from 161.97.117.104
 Deny from 161.97.117.238
 Deny from 161.97.118.183
+Deny from 161.97.120.207
 Deny from 161.97.128.124
 Deny from 161.97.133.150
 Deny from 161.97.134.83
@@ -14551,6 +14571,7 @@ Deny from 185.191.32.207
 Deny from 185.191.34.215
 Deny from 185.191.76.27
 Deny from 185.191.77.199
+Deny from 185.192.127.204
 Deny from 185.192.70.112
 Deny from 185.192.70.143
 Deny from 185.192.70.37
@@ -14576,6 +14597,7 @@ Deny from 185.196.0.19
 Deny from 185.196.0.21
 Deny from 185.196.10.141
 Deny from 185.196.10.25
+Deny from 185.196.220.16
 Deny from 185.196.220.26
 Deny from 185.196.8.126
 Deny from 185.196.8.17
@@ -14978,6 +15000,7 @@ Deny from 185.91.69.74
 Deny from 185.92.194.80
 Deny from 185.93.99.108
 Deny from 185.94.29.221
+Deny from 185.94.35.184
 Deny from 185.95.184.250
 Deny from 185.96.67.254
 Deny from 185.97.94.138
@@ -20742,6 +20765,7 @@ Deny from 212.102.41.34
 Deny from 212.102.41.36
 Deny from 212.102.41.37
 Deny from 212.102.42.202
+Deny from 212.102.46.41
 Deny from 212.102.46.47
 Deny from 212.102.46.66
 Deny from 212.102.51.249
@@ -22418,6 +22442,7 @@ Deny from 3.108.238.210
 Deny from 3.109.183.76
 Deny from 3.109.202.180
 Deny from 3.110.109.201
+Deny from 3.110.173.127
 Deny from 3.110.43.164
 Deny from 3.111.149.29
 Deny from 31.11.36.135
@@ -22734,6 +22759,7 @@ Deny from 34.136.221.42
 Deny from 34.136.68.118
 Deny from 34.136.94.240
 Deny from 34.138.102.122
+Deny from 34.138.104.199
 Deny from 34.138.109.180
 Deny from 34.138.114.101
 Deny from 34.138.116.13
@@ -23136,6 +23162,7 @@ Deny from 35.145.80.138
 Deny from 35.147.109.96
 Deny from 35.147.67.133
 Deny from 35.150.42.143
+Deny from 35.154.229.200
 Deny from 35.159.91.91
 Deny from 35.161.135.95
 Deny from 35.161.63.63
@@ -24411,7 +24438,9 @@ Deny from 40.69.33.98
 Deny from 40.69.34.125
 Deny from 40.69.36.117
 Deny from 40.69.39.178
+Deny from 40.69.66.31
 Deny from 40.69.72.208
+Deny from 40.69.74.82
 Deny from 40.69.80.227
 Deny from 40.69.89.183
 Deny from 40.70.203.195
@@ -25446,6 +25475,7 @@ Deny from 43.250.243.229
 Deny from 43.251.169.136
 Deny from 43.251.171.24
 Deny from 43.251.253.106
+Deny from 43.251.94.157
 Deny from 43.252.144.92
 Deny from 43.252.15.169
 Deny from 43.252.193.42
@@ -27999,6 +28029,7 @@ Deny from 5.189.178.204
 Deny from 5.189.183.215
 Deny from 5.189.183.89
 Deny from 5.189.184.9
+Deny from 5.189.187.103
 Deny from 5.189.187.50
 Deny from 51.89.195.107
 Deny from 51.89.199.101
@@ -29664,6 +29695,7 @@ Deny from 64.124.8.116
 Deny from 64.124.8.138
 Deny from 64.124.8.147
 Deny from 64.124.8.17
+Deny from 64.124.8.179
 Deny from 64.124.8.192
 Deny from 64.124.8.193
 Deny from 64.124.8.194
@@ -29777,6 +29809,7 @@ Deny from 64.227.141.85
 Deny from 64.227.147.179
 Deny from 64.227.155.26
 Deny from 64.227.170.5
+Deny from 64.227.171.175
 Deny from 64.227.178.79
 Deny from 64.227.179.13
 Deny from 64.227.180.166
@@ -29913,6 +29946,7 @@ Deny from 65.20.85.156
 Deny from 65.21.0.56
 Deny from 65.21.113.194
 Deny from 65.21.113.200
+Deny from 65.21.122.30
 Deny from 65.21.149.161
 Deny from 65.21.187.42
 Deny from 65.21.189.36
@@ -29940,6 +29974,7 @@ Deny from 65.21.35.240
 Deny from 65.21.35.247
 Deny from 65.2.160.23
 Deny from 65.21.62.78
+Deny from 65.2.167.252
 Deny from 65.21.69.76
 Deny from 65.255.52.63
 Deny from 65.34.129.138
@@ -30767,6 +30802,7 @@ Deny from 74.80.208.157
 Deny from 74.80.208.158
 Deny from 74.80.208.179
 Deny from 74.80.208.184
+Deny from 74.80.208.204
 Deny from 74.80.208.81
 Deny from 74.83.66.66
 Deny from 74.84.150.150
@@ -31476,6 +31512,7 @@ Deny from 81.161.229.194
 Deny from 81.161.229.20
 Deny from 81.161.229.250
 Deny from 81.161.229.77
+Deny from 81.161.238.216
 Deny from 81.161.238.43
 Deny from 81.161.238.47
 Deny from 81.161.59.17
@@ -32006,6 +32043,7 @@ Deny from 84.239.41.145
 Deny from 84.239.41.199
 Deny from 84.239.47.135
 Deny from 84.239.47.141
+Deny from 84.239.5.146
 Deny from 84.239.5.184
 Deny from 84.241.195.84
 Deny from 84.243.196.168
@@ -33470,6 +33508,7 @@ Deny from 93.115.200.86
 Deny from 93.115.97.36
 Deny from 93.118.32.119
 Deny from 93.120.220.190
+Deny from 93.123.109.193
 Deny from 93.123.109.251
 Deny from 93.123.118.149
 Deny from 93.123.118.249
@@ -33619,6 +33658,7 @@ Deny from 94.154.189.233
 Deny from 94.154.191.236
 Deny from 94.154.19.39
 Deny from 94.154.239.69
+Deny from 94.154.35.225
 Deny from 94.156.104.49
 Deny from 94.156.14.13
 Deny from 94.156.248.42
